--- a/biolab-interfaces.cabal
+++ b/biolab-interfaces.cabal
@@ -17,4 +17,4 @@ cabal-version:       >=1.8
 library
   exposed-modules:     Biolab.Interfaces.MySql
   -- other-modules:       
-  build-depends:       base ==4.5.*, HDBC-mysql ==0.6.*, HDBC ==2.3.*, utf8-string ==0.3.*, datetime ==0.2.*, mtl ==2.1.*, transformers ==0.3.*, either-unwrap ==1.1.*, ConfigFile ==1.1.*, time == 1.4.*, vector ==0.10.*, biolab-types ==0.1.*
+  build-depends:       base ==4.5.*, HDBC-mysql ==0.6.*, HDBC ==2.3.*, utf8-string ==0.3.*, datetime ==0.2.*, mtl ==2.*, transformers >=0.2 && < 0.4, either-unwrap ==1.1.*, ConfigFile ==1.1.*, time == 1.4.*, vector ==0.10.*, biolab-types ==0.1.*
